[package]
name = "sputnik-indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
serde_json = "1.0"
futures = "0.3"
anyhow = "1.0.98"
chrono = { version = "0.4", features = ["serde", "clock"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.12.0"
rocket = { version = "0.5.1", features = ["json", "http2"] }
rocket_cors = "0.6.0"
near-jsonrpc-client = "0.16.1"
near-jsonrpc-primitives = "0.29.2"
near-primitives = "0.29.2"
near-sdk = "5.12.0"
tokio = "1.44.2"
borsh = "1.5.7"
csv = "1.3.1"
reqwest = "0.12.15"
base64 = "0.21"
